Changes with logo, IE support and contents

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<script type="text/javascript" src="js/jquery-1.9.1.js"></script>
 		<script type="text/javascript" src="js/jquery.colorbox-min.js"></script> 
 		<script type="text/javascript" src="js/jquery.carouFredSel-6.2.1-packed.js" defer="defer"></script> 
-		<script type="text/javascript" src="js/initSections.js" defer="defer"></script> 
+		<!-- // <script type="text/javascript" src="js/initSections.js" defer="defer"></script>  -->
 		<script type="text/javascript" src="js/scripts.js"></script>
 		<script type="text/javascript" src="js/carousel.js"></script>
 
