Code cut after carousal fixes

--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
 						</p>
 					</span>
 					<span onCLick="showSubMenu();scrollToSection(sections[5]);" >
+						<h3><u>OUTDOOR SPACES:</u></h3>
+						<p>Outdoor spaces continue to influence our lives and have a great impact on how we live, work, play & Love. Our holistic approach to environmental design through the understanding of different yet related disciplines based on the integration of ecology, art and design creates a perfect synergy between the inside outside living concepts. 
+						</p>	
+					</span>
+					<span onCLick="showSubMenu();scrollToSection(sections[6]);" >
 						<h3><u>WORK & SOCIAL SPACES: </u></h3>
 						<p>We design for people who experience our work - customers, residents, guests, employees - to generate strategic returns for clients and emotional returns for communities. We believe that these needs are best met by creating remarkable experiences for the people who regularly engage with the places we design. 
 						We bring high quality design work through a uniquely collaborative process that works for both people & clients.
 						</p>
-					</span>
-					<span onCLick="showSubMenu();scrollToSection(sections[6]);" >
-						<h3><u>OUTDOOR SPACES:</u></h3>
-						<p>Outdoor spaces continue to influence our lives and have a great impact on how we live, work, play & Love. Our holistic approach to environmental design through the understanding of different yet related disciplines based on the integration of ecology, art and design creates a perfect synergy between the inside outside living concepts. 
-						</p>	
-				</span>
+					</span>					
 				</div>	
 			</div>			
 		</div>
@@ -308,6 +308,10 @@
 						</div>
 					</div>
 				</div>
+
+<!-- 
+				<div class="clearfix"></div>
+				<div class="pagination" id="livingPage"><a>Page1</a></div> -->
 			</div>	
 		</div>
 		<div class="forBackground" >
