Style and Get in Touch changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			</div>
 			<div id="nav">
 				<ul id="menu" class="topmenu">
-					<li id="About" class="menu-item"  onClick="hideSubMenu();"><span class="fake-link">About</span></li>
+					<li id="AboutUs" class="menu-item"  onClick="hideSubMenu();"><span class="fake-link">About Us</span></li>
 					<li id="Services" class="menu-item" onClick="hideSubMenu();"><span class="fake-link">Services</span></li>
 					<li id="Projects" class="menu-item" onClick="showSubMenu();"><span class="fake-link">Projects</span></li>
 					<ul  class="submenu-list">
@@ -36,24 +36,23 @@
 			<img src="images/LivingSpaces/CreightonAvenueHouseLondon/1.jpg" width="100%" style="position:absolute; ">
 			<div class="section" id="HomeSection">
 				<div class="Contents">
-					<h2>Home page contents</h2>
-					"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+					<h2>
+						<i>"Innovation & Creativity in design is way of life"</i>
+					</h2>
+					<p>
+						<span style="font-size: 14px;font-weight: bold;"><i>'The <span style="color:red;">5th</span> Element'</i></span> is an idea that enhances the lifestyle concept. It emphasizes on the way people choose to live and create a space that truly defines luxury, functionality & creativity 'LFC'. 
+					</p>
+
 				</div>
 			</div>
 		</div>
 		<div class="forBackground" >
 			<img src="images/LivingSpaces/BucklandHillMaidstoneUK/1.jpg" width="100%" style="position:absolute; ">
 
-			<div class="section" id="AboutSection">
+			<div class="section" id="AboutUsSection">
 				<div class="Contents" >
-					<p>
-					<i>"Innovation & Creativity in design is way of life"</i>
-
-					<p>
-					<span style="font-size: 14px;font-weight: bold;"><i>'The <span style="color:red;">5th</span> Element'</i></span> is an idea that enhances the lifestyle concept. It emphasizes on the way people choose to live and create a space that truly defines luxury, functionality & creativity 'LFC'. 
-					</p>
 					
-					<p>This young Design practice works at a variety of scales & locations and approaches work without any pre conceived ideas, thus creating an expression that is unique in terms of its design, style & approach.  
+					<p><span style="font-size: 14px;font-weight: bold;"><i>'The <span style="color:red;">5th</span> Element'</i></span> is a young Design practice works at a variety of scales & locations and approaches work without any pre conceived ideas, thus creating an expression that is unique in terms of its design, style & approach.  
 					</p>
 					<p>
 					Our work portfolio is a mix of modern, contemporary & fusion style of designing. From the innovative concepts to extensive & practical design solutions we aim to re define the way people live, work, play & Love. 
@@ -67,29 +66,29 @@
 		</div>
 
 		<div class="forBackground" >
-			<img src="images/LivingSpaces/TheVestryLondon/1.jpg" width="100%" style="position:absolute; ">
+			<img src="images/LivingSpaces/GrevilleHallLondon/1.jpg" width="100%" style="position:absolute; ">
+			<!-- "images/LivingSpaces/TheVestryLondon/1.jpg" -->
+			 
 
 			<div class="section" id="ServicesSection">
 				<div class="Contents">
-				<h2>We can assist you with - </h2>
-					<p> 
-						<ul id="ServicesList">
-						<li class="ServicesListItem">Architecture/Interior Design	</li>
-					    <li class="ServicesListItem">Branding </li>
-					    <li class="ServicesListItem">Specification Adviser</li>
-					    <li class="ServicesListItem">Interior Styling </li>
-					    <li class="ServicesListItem">Marketing & PR </li>
-					    <li class="ServicesListItem">Material Outsourcing </li>
-					    <li class="ServicesListItem">Outdoor Design </li>
-						</ul>
-					</p>
-
+				<h2>We can assist you with </h2>
+					<div style="float:left; margin-left:50px;"> 
+ 						Architecture/Interior Design<br><br>
+						Specification Adviser<br><br>
+					    Marketing & PR<br><br>
+					    Outdoor Design 
+ 					</div>
+ 					<div style="float:right; margin-right:300px;">
+ 						Branding<br><br>
+						Interior Styling <br><br>
+					    Material Outsourcing <br><br>
+ 					</div>
 				</div>	
 			</div>
 		</div>
 		<div class="forBackground" >
-			<img src="images/WorkNSocialSpaces/SpaceConception/2.jpg" width="100%" style="position:absolute; ">
-
+			<img src="images/LivingSpaces/CreightonAvenueHouseLondon/2.jpg" width="100%" style="position:absolute; ">
 			<div class="section" id="ProjectsSection">
 				<div class="Contents" >
 					<span onCLick="showSubMenu();scrollToSection(sections[4]);" >
@@ -97,12 +96,12 @@
 						<p>	
 							Our tailor made living spaces are a true essence of our core value of enhancing lifestyle concepts. 
 							From the initial client meeting through occupancy, our team works closely with our clients to identify their design goals, schedule requirements and budgetary parameters. Ultimately, we develop a design that is sensitive to the individual considerations of the project and transforms our client's vision into reality. 
-						</p>
+						</p> <br>
 					</span>
 					<span onCLick="showSubMenu();scrollToSection(sections[5]);" >
 						<h3><u>OUTDOOR SPACES:</u></h3>
-						<p>Outdoor spaces continue to influence our lives and have a great impact on how we live, work, play & Love. Our holistic approach to environmental design through the understanding of different yet related disciplines based on the integration of ecology, art and design creates a perfect synergy between the inside outside living concepts. 
-						</p>	
+						<p>Outdoor spaces continue to influence our lives and have a great impact on how we live, work, play & Love. Our holistic approach to environmental design through the understanding of different yet related disciplines based on the integration of ecology, art and design creates a perfect synergy between the inside outside living concepts.
+						</p>	 <br>
 					</span>
 					<span onCLick="showSubMenu();scrollToSection(sections[6]);" >
 						<h3><u>WORK & SOCIAL SPACES: </u></h3>
@@ -114,7 +113,7 @@
 			</div>			
 		</div>
 		<div class="forBackground" >
-			<img src="images/WorkNSocialSpaces/SpaceConception/Bckgrd.jpg" width="100%" style="position:absolute; ">
+			<img src="images/WorkNSocialSpaces/RestoBarDubai/Bckgrd.jpg" width="100%" style="position:absolute; ">
 
 			<div class="projsubsection" id="LivingSpacesSection">
 				<div class="wrapper">
@@ -315,7 +314,7 @@
 			</div>	
 		</div>
 		<div class="forBackground" >
-			<img src="images/WorkNSocialSpaces/SpaceConception/Bckgrd.jpg" width="100%" style="position:absolute; ">
+			<img src="images/WorkNSocialSpaces/RestoBarDubai/Bckgrd.jpg" width="100%" style="position:absolute; ">
 
 			<div class="projsubsection" id="OutdoorsSection">
 			    <div class="wrapper">
@@ -372,7 +371,7 @@
 			</div>
 		</div>
 		<div class="forBackground" >
-			<img src="images/WorkNSocialSpaces/SpaceConception/Bckgrd.jpg" width="100%" style="position:absolute; ">
+			<img src="images/WorkNSocialSpaces/RestoBarDubai/Bckgrd.jpg" width="100%" style="position:absolute; ">
 
 			<div class="projsubsection" id="WorkNSocialSpacesSection">
 				<div class="wrapper">
@@ -429,7 +428,7 @@
 						</div>
 
 						<!-- Candy Bar Soho -->
-						<div class="rslide"> 
+						<!-- <div class="rslide"> 
 							<img src="images/WorkNSocialSpaces/CandyBarSoho/1.jpg" width="700" height="500" onClick="$('#candybar1').click();activeSlider='#WorkNSocialSpacesSlider';$('#WorkNSocialSpacesSlider').trigger('pause');"/>
 							<div class="AllProjectImages" >
 	                            <a class="worksocial3" id="candybar1" href="images/WorkNSocialSpaces/CandyBarSoho/1.jpg" title="Candy Bar Soho"></a>
@@ -448,7 +447,7 @@
 								<h4>Candy Bar, Soho, London</h4>
 								<a title="View project photos" onClick="$('#candybar1').click();activeSlider='#WorkNSocialSpacesSlider';$('#WorkNSocialSpacesSlider').trigger('pause');" style="cursor: pointer;text-decoration:underline;">Click here for more photos</a>
 							</div>
-						</div>
+						</div> -->
 							<!-- Muscat Resto Bar -->
 						<div class="rslide"> 
 							<img src="images/WorkNSocialSpaces/Muscat/1.jpg" width="700" height="500" onClick="$('#muscat1').click();activeSlider='#WorkNSocialSpacesSlider';$('#WorkNSocialSpacesSlider').trigger('pause');"/>
@@ -475,11 +474,11 @@
 			</div>
 		</div>
 		<div class="forBackground" >
-			<img src="images/Outdoors/CreightonAvenue/1.jpg" width="100%" style="position:absolute; ">
+			<img src="images/Outdoors/CreightonAvenue/Main.jpg" width="100%" style="position:absolute; ">
 	
 			<div class="section" id="GetInTouchSection">
 				<div class="Contents">
-					<div>
+					<div id="address" style="float:left">
 						<!-- <h2>Contact Us </h2> -->
 						<h3>The 5th Element</h3>
 						Crystal Colony,<br>Store No. B 11,<br>
@@ -487,11 +486,20 @@
 						Mumbai - 400016<br><br>
 						T: +91 22 24454745<br>
 						M: +91 9833866142<br><br>
-						W: <a href="#HomeSection">www.the5thelement.co.in</a><br>
-						E: <a href="mailto:info@the5thelement.co.in"> info@the5thelement.co.in</a><br>
+						W: <a href="#HomeSection">www.the5thelement.in</a><br>
+						E: <a href="mailto:info@the5thelement.in"> info@the5thelement.in</a><br>
 						</p>
 					</div>
-
+ 					<div id="enquiry" style="float:right; ">
+<iframe width="350" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.in/maps/ms?hl=en&amp;ie=UTF8&amp;msa=0&amp;msid=212517706002699851147.0004e1dd1a2f067f46c23&amp;t=m&amp;ll=19.040631,72.843271&amp;spn=0,0&amp;output=embed"></iframe><br /><small>View <a href="https://maps.google.co.in/maps/ms?hl=en&amp;ie=UTF8&amp;msa=0&amp;msid=212517706002699851147.0004e1dd1a2f067f46c23&amp;t=m&amp;ll=19.040631,72.843271&amp;spn=0,0&amp;source=embed" style="color:#0000FF;text-align:left">Space Conception/ The 5th Element</a> in a larger map</small>
+<!--						<h3>Send us your enquiry -</h3>
+						Name<sup>*</sup> : <input type="text"></input><br>
+						Email<sup>*</sup> : <input type="text"></input><br>
+						Phone : <input type="text"></input><br>
+						Enquiry<sup>*</sup> : <textarea rows="6" cols="40"></textarea><br>
+						<br>
+						<input type="submit"></input>-->
+					</div> 
 				</div>
 			</div>
 		</div>
