With font changes and animations

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="stylesheet" type="text/css" href="css/colorbox.css">
 		<link rel="stylesheet" type="text/css" href="css/carousel.css">
+		<link rel="stylesheet" type="text/css" href="css/responsive.css">
 		<script type="text/javascript" src="js/jquery-1.9.1.js"></script>
 		<script type="text/javascript" src="js/jquery.carouFredSel-6.2.1-packed.js" defer="defer"></script> 
 		<script type="text/javascript" src="js/carousel.js"></script>
 		<script type="text/javascript" src="js/scripts.js"></script>
 		<script type="text/javascript" src="js/jquery.colorbox-min.js"></script> 
 		<title>The 5th Element</title>
+		<meta name="keywords" lang="en" content="Mahim Mumbai Architecture Interior Design Styling Outdoor Specification Adviser Material Outsourcing Marketing & PR Branding">
+		<meta name="author" content="AppliedSolutions">
+		<meta name="description" lang="en" content="Architecture Interior Design Styling Outdoor Specification Adviser Material Outsourcing Marketing & PR Branding Firm">
 
 	</head>
 
@@ -32,6 +36,9 @@
 				</ul>
 			</div>
 		</div>
+		<!--[if lte IE 7]>
+			<div class="info" style="top:10px;position:fixed;left:220px;z-index:10;color:red;background-color:white;">This site is best when viewed in IE8+ version browsers. Please upgrade your browser to latest version.</div>
+		<![endif]-->
 		<div class="forBackground" >
 			<img src="images/Home.jpg" width="100%" style="position:absolute; ">
 			<div class="section" id="HomeSection">
@@ -403,8 +410,8 @@
 	                            <a class="worksocial2" id="sc1" href="images/WorkNSocialSpaces/SpaceConception/1.jpg" title="Space Conception"></a>
 	                            <a class="worksocial2" id="sc2" href="images/WorkNSocialSpaces/SpaceConception/2.jpg" title="Space Conception">
 	                            </a>
-	                            <a class="worksocial2" id="sc3" href="images/WorkNSocialSpaces/SpaceConception/3.jpg" title="Space Conception">
-	                            </a>
+	                            <!-- <a class="worksocial2" id="sc3" href="images/WorkNSocialSpaces/SpaceConception/3.jpg" title="Space Conception"> 
+	                            </a>-->
 	                            <a class="worksocial2" id="sc4" href="images/WorkNSocialSpaces/SpaceConception/4.jpg" title="Space Conception">
 	                            </a>
 	                            <a class="worksocial2" id="sc5" href="images/WorkNSocialSpaces/SpaceConception/5.jpg" title="Space Conception">
@@ -413,8 +420,8 @@
 	                            </a>
 	                            <a class="worksocial2" id="sc7" href="images/WorkNSocialSpaces/SpaceConception/7.jpg" title="Space Conception">
 	                            </a>
-	                            <a class="worksocial2" id="sc8" href="images/WorkNSocialSpaces/SpaceConception/8.jpg" title="Space Conception">
-	                            </a>
+	                            <!-- <a class="worksocial2" id="sc8" href="images/WorkNSocialSpaces/SpaceConception/8.jpg" title="Space Conception"> 
+	                            </a>-->
 	                            <a class="worksocial2" id="sc9" href="images/WorkNSocialSpaces/SpaceConception/9.jpg" title="Space Conception">
 	                            </a>
 	                            <a class="worksocial2" id="sc10" href="images/WorkNSocialSpaces/SpaceConception/10.jpg" title="Space Conception">
