--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 			<div class="section" id="HomeSection">
 				<div class="Contents" id="HomeContents">
 					<h2>
-						<i>"Innovation & Creativity in design is way of life"</i>
+						"Innovation & Creativity in design is a way of life"
 					</h2>
 					<p>
-						<span style="font-size: 14px;font-weight: bold;"><i>'The <span style="color:red;">5<sup>th</sup></span> Element' </i></span> is an idea that enhances the lifestyle concept. 
+						<span style="font-size: 14px;font-weight: bold;">'The <span style="color:red;">5<sup>th</sup></span> Element' </span> is an idea that enhances the lifestyle concept. 
 						It emphasizes on the way people choose to live and create a space that truly defines luxury, functionality & creativity 'LFC'. 
 					</p>
 
@@ -60,14 +60,14 @@
 			<div class="section" id="AboutUsSection">
 				<div class="Contents" id="AboutUsContents">
 					
-					<p><span style="font-size: 14px;font-weight: bold;"><i>'The <span style="color:red;">5<sup>th</sup></span> Element'</i></span> is a young Design practice works at a variety of scales & locations and approaches work without any pre conceived ideas, thus creating an expression that is unique in terms of its design, style & approach.  
+					<p><span style="font-size: 14px;font-weight: bold;">'The <span style="color:red;">5<sup>th</sup></span> Element'</span> is a young Design practice works at a variety of scales & locations and approaches work without any pre conceived ideas, thus creating an expression that is unique in terms of its design, style & approach.  
 					</p>
 					<p>
 					Our work portfolio is a mix of modern, contemporary & fusion style of designing. From the innovative concepts to extensive & practical design solutions we aim to re define the way people live, work, play & Love. 
 					</p>
 					<p>From Conceptualizing the Design to its Execution; Branding & Marketing to PR, we select the best talent and consulting teams available worldwide to form special "think tanks" that brainstorm and execute unique design solutions tailored to meet our Clients' project needs, budgets, and schedules. 
 					</p>
-					With <span style="font-size: 14px;font-weight: bold;"><i>'The <span style="color:red;">5<sup>th</sup></span> Element'</i></span> possibilities are truly endless.
+					With <span style="font-size: 14px;font-weight: bold;">'The <span style="color:red;">5<sup>th</sup></span> Element'</span> possibilities are truly endless.
 					</p>
 				</div>
 			</div>
@@ -100,7 +100,7 @@
 		<div class="forBackground" >
 			<img src="images/Projects.jpg" width="100%" style="position:absolute; ">
 			<div class="section" id="ProjectsSection">
-				<div class="Contents" id="ProjectsContents">
+				<div class="Contents" id="ProjectsContents" style="cursor: pointer;">
 					<span onCLick="showSubMenu();scrollToSection(sections[4]);" >
 						<h3><u>LIVING SPACES:</u></h3>
 						<p>	
@@ -479,7 +479,7 @@
 						</p>
 					</div>
  					<div id="enquiry" style="float:right; ">
-<iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.in/maps/ms?hl=en&amp;ie=UTF8&amp;msa=0&amp;msid=212517706002699851147.0004e1dd1a2f067f46c23&amp;t=m&amp;ll=19.040631,72.843271&amp;spn=0,0&amp;output=embed"></iframe><br /><small>View <a href="https://maps.google.co.in/maps/ms?hl=en&amp;ie=UTF8&amp;msa=0&amp;msid=212517706002699851147.0004e1dd1a2f067f46c23&amp;t=m&amp;ll=19.040631,72.843271&amp;spn=0,0&amp;source=embed" style="color:#0000FF;text-align:left">Space Conception/ The 5th Element</a> in a larger map</small>
+<iframe width="100%" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.co.in/maps/ms?hl=en&amp;ie=UTF8&amp;msa=0&amp;msid=212517706002699851147.0004e1dd1a2f067f46c23&amp;t=m&amp;ll=19.040631,72.843271&amp;spn=0,0&amp;output=embed"></iframe><br /><small><a href="https://maps.google.co.in/maps/ms?hl=en&amp;ie=UTF8&amp;msa=0&amp;msid=212517706002699851147.0004e1dd1a2f067f46c23&amp;t=m&amp;ll=19.040631,72.843271&amp;spn=0,0&amp;source=embed" style="color:#0000FF;text-align:left">View in a larger map</a></small>
 <!--						<h3>Send us your enquiry -</h3>
 						Name<sup>*</sup> : <input type="text"></input><br>
 						Email<sup>*</sup> : <input type="text"></input><br>
